--- a/end.html
+++ b/end.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>END</title>
-    <link rel="stylesheet" href="/end.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="end.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script src="/end.js"></script>
+    <script src="end.js"></script>
 </body>
 </html>
