--- a/play.html
+++ b/play.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Quiz - Play</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/play.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="play.css">
 </head>
 <body>
     <div class="container">
@@ -55,6 +55,6 @@
 
     </div>
 
-    <script src="/play.js"></script>
+    <script src="play.js"></script>
 </body>
 </html>
