--- a/end.html
+++ b/end.html
@@ -17,8 +17,8 @@
             
                 <button type="submit" class="btn" id="saveScoreBtn" disabled>SAVE</button>
             </form>
-        <a class="btn" href="/play.html">Play Again</a>
-        <a class="btn" href="/play.html">Go Home</a>
+        <a class="btn" href="play.html">Play Again</a>
+        <a class="btn" href="play.html">Go Home</a>
         </div>
     </div>
 
