--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="home" class="flex-center flex-column">
             <h1>QUICK QUIZ</h1>
-            <a class="btn" href="/play.html">Play</a>
+            <a class="btn" href="play.html">Play</a>
             <a class="btn" href="/highscores.html">High Scores</a>
         </div>
     </div>
