--- a/end.html
+++ b/end.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div id="end" class="flex-center flex-column">
             <h1 id="finalScore">5</h1>
-            <form>
+            <form action="/" method=post>
                 <input type="text" name="username" id="username" placeholder="username"/>
             
                 <button type="submit" class="btn" id="saveScoreBtn" disabled>SAVE</button>
